# waRPC-examples

./: .clang-format  .gitignore  .gitmodules  Getting_started.md  LICENSE  README.md  README_jap.md  README_tw.md  THIRD-PARTY-NOTICES  go.mod  justfile
async_calc/: CMakeLists.txt  justfile  sync.hpp
async_calc/client/: CMakeLists.txt  client.cpp
async_calc/client/processor/: calc.cpp
async_calc/schema/: calc.wa.rpc
async_calc/server/: CMakeLists.txt  server.cpp
async_calc/server/dispatch/: dispatch.cpp
c++/: CMakeLists.txt
c++/client/: CMakeLists.txt  client.cpp
c++/client/process/: exmp.warpc.cpp
c++/server/: CMakeLists.txt
c++/server/dispatch/: exmp.warpc.cpp
c++/std/: CMakeLists.txt
c++/std/client/: client.cpp
c++/std/client/process/: exmp.warpc.cpp
c++/std/sync/: sync.h
go/client/: client.go  echo.warpc.go
go/common/: routes.go
go/server/: echo.go  server.go
odin/client/: client.odin  echo.warpc.odin
odin/common/: routes.odin
odin/server/: echo.warpc.odin  server.odin
rust/: Cargo.toml
rust/src/handlers/: calc.rs  echo.rs  mod.rs
schema/: exmp.wa.rpc
sync_calc/: justfile
sync_calc/client/: client.cpp
sync_calc/client/processor/: calc.cpp
sync_calc/schema/: calc.wa.rpc
sync_calc/server/: CMakeLists.txt
sync_calc/server/dispatcher/: calc.cpp
webtransport/: package.json
webtransport/src/: App.tsx
webtransport/src/styles/: index.scss
